restyling project pages

--- a/index.html
+++ b/index.html
@@ -69,11 +69,10 @@
             <div class="grid-x grid-padding-x">
                 <div class="small-12 cell tagline">
                         <h1><span class="">Uw <span class="">eigen</span> gezicht</span></h1>
-                        <h2 class="">Wij maken illustraties voor uw <span class="">bijzondere online</span> identiteit</h2>
+                        <h2 class="">Wij maken illustraties voor een <span class="">bijzondere online</span> identiteit</h2>
                 <!-- </div>
                 <div class="bottom-content-section" data-magellan data-threshold="0"> -->
-                        <a href="#" class="button"><div style="font-weight:bold; margin-bottom:0.5rem">Wat kunnen wij voor u doen?</div>
-                            <!-- <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M24 12c0-6.627-5.373-12-12-12s-12 5.373-12 12 5.373 12 12 12 12-5.373 12-12zm-18.005-1.568l1.415-1.414 4.59 4.574 4.579-4.574 1.416 1.414-5.995 5.988-6.005-5.988z"/></svg> -->
+                        <a href="#" class="button">Wat kunnen wij voor u doen?
                         </a>
                   </div>
             </div>
@@ -113,12 +112,12 @@
                 <div class="masonry-css">
 
                     <div class="masonry-css-item">
-                        <a class="" href="filmfabriek.html">
+                        <a class="" href="filmfabriek1.html">
                                 <img src="img/FilmfabriekDef.jpg" class="" height="" width="" alt="">
-                                <span class="inner" style="background-color:#3379c7;">
+                                <span class="inner" style="background-color:#27599c;">
                                         <span class="helper"></span>
                                         <span class="info">
-                                        <h2>Filmfabriek</h2>
+                                        <h3>De Filmfabriek</h3>
                                         <p>Eigen opdracht</p>
                                         </span>
                                     </span>
@@ -130,12 +129,12 @@
 
                     <!--doorklik -->
                     <div class="masonry-css-item">
-                        <a href="stad1.html" class="">
+                        <a href="stadskyline.html" class="">
                             <img src="img/Stad01Def.jpg" class="" height="" width="" alt="">
                             <span class="inner" style="background-color:#443153;">
                                     <span class="helper"></span>
                                     <span class="info">
-                                    <h2>Stad skyline</h2>
+                                    <h3>Stad skyline</h3>
                                     <p>Eigen opdracht</p>
                                     </span>
                                 </span>
@@ -159,7 +158,7 @@
                             <span class="inner" style="background-color:#9c509a;">
                                 <span class="helper"></span>
                                 <span class="info">
-                                <h2>Stad in water</h2>
+                                <h3>Stad in water</h3>
                                 <p>Eigen opdracht</p>
                                 </span>
                             </span>
@@ -215,29 +214,7 @@
                 <p>yetirules@fakeemail.com</p>
                 </div>
             </div>
-            <div class="medium-4 cell ">
-                <h4 class="marketing-site-footer-title">Instagram</h4>
-                <div class="grid-x">
-                <div class="cell medium-4">
-                    <img src="https://placehold.it/75" alt="" />
-                </div>
-                <div class="cell medium-4">
-                    <img src="https://placehold.it/75" alt="" />
-                </div>
-                <div class="cell medium-4 ">
-                    <img src="https://placehold.it/75" alt="" />
-                </div>
-                <div class="cell medium-4">
-                    <img src="https://placehold.it/75" alt="" />
-                </div>
-                <div class="cell medium-4">
-                    <img src="https://placehold.it/75" alt="" />
-                </div>
-                <div class="cell medium-4">
-                    <img src="https://placehold.it/75" alt="" />
-                </div>
-                </div>
-            </div>
+
             </div>
             <div class="marketing-site-footer-bottom">
             <div class="row align-middle">
