--- a/stadskyline.html
+++ b/stadskyline.html
@@ -59,36 +59,28 @@
 
         <div class="grid-x grid-padding-x">
 
-            <div  class="small-12 cell project" style="background-color:#9c509a;">
-                    <div class="">
+            <div  class="small-12 cell project" style="background-color:#443153">
+                    <div class="project">
                         <div class="grid-x grid-padding-x">
 
                                 <div class="cell image-container">
-                                        <img src="img/stadinwater.jpg">
+                                        <img src="img/Stad01Def.jpg">
                                     </div>
                                     <div class="cell tekst">
-                                            <h3><span>Stad in water</span></h3>
+                                            <h3><span>Stad skyline</span></h3>
                                             <p>Illustratie in eigen opdracht</p>
                                         </div>
 
                         </div>
 
-                        <!-- <div class="grid-x">
-                            <div class="cell bottom-content-section " data-magellan data-threshold="0">
-                                    <a href="#toepassing" class="button "><div style="font-weight:bold; margin-bottom:0.5rem">Bekijk toepassing</div>
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M24 12c0-6.627-5.373-12-12-12s-12 5.373-12 12 5.373 12 12 12 12-5.373 12-12zm-18.005-1.568l1.415-1.414 4.59 4.574 4.579-4.574 1.416 1.414-5.995 5.988-6.005-5.988z"/></svg>
-                                    </a>
-                            </div>
-
-                        </div> -->
 
                         <div class="grid-x grid-margin-x project-toepassing">
-                                <div class="cell medium-5 medium-offset-1  image-container">
-                                        <img src="img/stad-in-water2a.jpg">
+                                <div class="cell image-container">
+                                        <img src="img/stad01-skyline.jpg">
                                     </div>
-                                    <div class="cell auto tekst">
+                                    <div class="cell tekst">
                                             <h3><span>Toepassing:</span></h3>
-                                            <p>Mobiele landingspagina voor een uitgeverij</p>
+                                            <p>Hero banner voor een reisbureau</p>
                                         </div>
 
                         </div>
