--- a/stadinwater.html
+++ b/stadinwater.html
@@ -13,6 +13,7 @@
     <!-- <link href="https://fonts.googleapis.com/css?family=Cardo:400,400i,700|Pathway+Gothic+One|Roboto+Mono:100,100i,300,300i,400,400i,500,500i,700,700i|Rubik:300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet"> -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link rel="stylesheet" href="css/foundation.css">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
@@ -70,17 +71,14 @@
                                             <h3><span>Stad in water</span></h3>
                                             <p>Illustratie in eigen opdracht</p>
                                         </div>
+                                        <div class="cell medium-5 medium-offset-4 tekst">
+                                                <h3><span>Mogelijkheden</span></h3>
+                                                <p>Hero illustratie, banner illustratie. De illustratie kan iedere gewenste kleur worden gegeven.</p>
+                                                <p>Hieronder staat een mogelijke toepassing:</p>
+                                            </div>
 
                         </div>
 
-                        <!-- <div class="grid-x">
-                            <div class="cell bottom-content-section " data-magellan data-threshold="0">
-                                    <a href="#toepassing" class="button "><div style="font-weight:bold; margin-bottom:0.5rem">Bekijk toepassing</div>
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M24 12c0-6.627-5.373-12-12-12s-12 5.373-12 12 5.373 12 12 12 12-5.373 12-12zm-18.005-1.568l1.415-1.414 4.59 4.574 4.579-4.574 1.416 1.414-5.995 5.988-6.005-5.988z"/></svg>
-                                    </a>
-                            </div>
-
-                        </div> -->
 
                         <div class="grid-x grid-margin-x project-toepassing">
                                 <div class="cell medium-5 medium-offset-1  image-container">
@@ -111,49 +109,47 @@
 
 
 
+        <footer class="footer">
+                <div class="footer-top grid-x hide-for-small-only">
+                    <div class="medium-6 cell ">
+                        <h4 class="footer-name">imagemagnific</h4>
+                        <p>Wij maken illustraties voor een unieke identiteit. </p>
+                        <ul class="menu footer-menu-social simple">
+                        <li><a href="#"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fab fa-facebook-square" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fab fa-twitter-square" aria-hidden="true"></i></a></li>
+                        </ul>
+                    </div>
+                    <div class="auto medium-offset-1 cell ">
+                        <h4 class="footer-title">Contact Info</h4>
 
-        <footer class="marketing-site-footer">
-            <div class="grid-x">
-            <div class="medium-4 cell">
-                <h4 class="marketing-site-footer-name">Image Magnifique</h4>
-                <p>Wij maken illustraties voor online en offline uitingen. </p>
-                <ul class="menu marketing-site-footer-menu-social simple">
-                <li><a href="#"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fab fa-facebook-square" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fab fa-twitter-square" aria-hidden="true"></i></a></li>
-                </ul>
-            </div>
-            <div class="medium-4 cell">
-                <h4 class="marketing-site-footer-title">Contact Info</h4>
+                        <div class="footer-block">
+                        <i class="fas fa-phone" aria-hidden="true"></i>
+                        <p>1 (800) 555-5555</p>
+                        </div>
+                        <div class="footer-block">
+                        <i class="fas fa-envelope" aria-hidden="true"></i>
+                        <p>yetirules@fakeemail.com</p>
+                        </div>
+                    </div>
 
-                <div class="marketing-site-footer-block">
-                <i class="fas fa-phone" aria-hidden="true"></i>
-                <p>1 (800) 555-5555</p>
                 </div>
-                <div class="marketing-site-footer-block">
-                <i class="fas fa-envelope" aria-hidden="true"></i>
-                <p>yetirules@fakeemail.com</p>
-                </div>
-            </div>
 
-            </div>
-            </div>
-            <div class="marketing-site-footer-bottom">
-            <div class="row align-middle">
-                <div class="cell">
-                <p>&copy; 2018 image magnifique</p>
+
+                <div class="footer-bottom show-for-small-only">
+                    <div class="grid-x align-middle">
+                        <div class="cell">
+                        <ul class="menu footer-bottom-links">
+
+                            <li><a class="active" href="#">Werk</a></li>
+                            <li><a href="#">Diensten</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
+                        </div>
+                    </div>
                 </div>
-                <div class="cell">
-                <ul class="menu marketing-site-footer-bottom-links">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-                </div>
-            </div>
-            </div>
-        </footer>
+            </footer>
+
 
 
 </div>
